@@ -6,9 +6,10 @@ import static org.mockito.Mockito.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.ZonedDateTime;
 import java.util.List;
+import java.util.regex.Pattern;
 import java.util.zip.ZipFile;
 
 import org.junit.jupiter.api.AfterEach;
@@ -110,9 +111,9 @@ public class SubmissionExportIntegrationTest extends AbstractSpringIntegrationBa
 
     private void saveEmptySubmissionFile(Exercise exercise, FileUploadSubmission submission) throws IOException {
 
-        String[] parts = submission.getFilePath().split("/");
+        String[] parts = submission.getFilePath().split(Pattern.quote(File.separator));
         String fileName = parts[parts.length - 1];
-        File file = Paths.get(FileUploadSubmission.buildFilePath(exercise.getId(), submission.getId()), fileName).toFile();
+        File file = Path.of(FileUploadSubmission.buildFilePath(exercise.getId(), submission.getId()), fileName).toFile();
 
         File parent = file.getParentFile();
         if (!parent.exists() && !parent.mkdirs()) {
